# coco-accelerated

./: .gitignore  Cargo.toml  Criterion.toml  README.md  evaluate.sbatch  evaluate.sh  flake.nix
accelerated/: Cargo.toml  build.rs
accelerated/src/: config.rs  context.rs  functions.rs  lib.rs  run.rs  sys.rs
accelerated/src/futhark/: bbob.fut  math.fut  raw.fut  transform.fut
accelerated/src/storage/: mod.rs
benches/: single_cpu_eval.rs
coco-accelerated/: Cargo.toml
coco-accelerated/src/: bbob.rs  context.rs  eval.rs  lib.rs  matrix.rs  problem.rs
coco-accelerated/src/eval/: coco.rs  futhark.rs  futhark_c.rs  futhark_cuda.rs  futhark_multicore.rs  futhark_opencl.rs  mod.rs
coco-futhark/: Cargo.toml  build.rs
coco-futhark-compiler/: Cargo.toml
coco-futhark-compiler/src/: lib.rs
coco-futhark/c/: Cargo.toml  build.rs
coco-futhark/cuda/: Cargo.toml  build.rs
coco-futhark/futharkc/: Cargo.toml
coco-futhark/futharkc/src/: lib.rs
coco-futhark/multicore/: Cargo.toml  build.rs
coco-futhark/opencl/: Cargo.toml  build.rs
coco-futhark/shared/: Cargo.toml  build.rs
coco-futhark/shared/src/: context.rs  functions.rs  run.rs  sys.rs
coco-futhark/shared/src/futhark/: batch.fut  bbob.fut  raw.fut
coco-futhark/shared/src/storage/: f64_1d.rs  f64_2d.rs
coco-futhark/src/: config.rs  context.rs  functions.rs  lib.rs  run.rs  transform.fut
coco-futhark/src/backend/: implement.rs  mod.rs
coco-futhark/src/backend/c/: mod.rs  sys.rs
coco-futhark/src/backend/c copy/: mod.rs  sys.rs
coco-futhark/src/backend/cuda/: mod.rs
coco-futhark/src/backend/multicore/: mod.rs  sys.rs
coco-futhark/src/backend/opencl/: mod.rs  sys.rs
coco-futhark/src/futhark/: batch.fut  raw.fut
coco-futhark/src/storage/: f64_1d.rs  f64_2d.rs
coco-legacy/: Cargo.toml  build.rs
coco-legacy/src/: legacy_code.c  lib.rs
evaluation/: Cargo.toml
evaluation/benches/: batch_eval.rs  single_cpu_eval.rs  single_eval.rs
evaluation/tests/: bbob.rs  sanity.rs
plotting/: plot  requirements.txt  setup  setup.sh
plotting/src/: augment.py  main.py  plots.ipynb  plots.py  report.py
src/: batch.rs  bbob.rs  eval.rs  lib.rs  matrix.rs  problem.rs  reference.rs
src/bbob/: function.rs  futhark.rs  params.rs  problem.rs
tests/: bbob.regressions  bbob.rs  sanity.rs
