[package]
name = "coco-accelerated"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["accelerated", "coco-legacy"]

[[bench]]
name = "single_cpu_eval"
harness = false

[features]
opencl = ["accelerated/opencl"]

[dependencies]
coco = { version = "0.5.0", package = "coco-rs" }
accelerated = { path = "accelerated" }
coco-legacy = { path = "coco-legacy" }
float_eq = "1.0.0"

[dev-dependencies]
criterion = "0.3.5"
once_cell = "1.12.0"
proptest = "1.0.0"
