[package]
name = "coco-accelerated"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["coco-legacy", "coco-futhark"]

[features]
c = ["coco-futhark/c"]
multicore = ["coco-futhark/multicore"]
opencl = ["coco-futhark/opencl"]
cuda = ["coco-futhark/cuda"]
default = ["c", "multicore"]

[dependencies]
coco-legacy = { path = "./coco-legacy" }
coco-futhark = { path = "./coco-futhark", default-features = false }
float_eq = "1.0.1"
ordered-float = "3.0.0"
strum = { version = "0.24.1", features = ["derive"] }
