[package]
name = "coco-accelerated"
version = "0.1.0"
edition = "2021"

[features]
c = ["coco-futhark-c"]
multicore = ["coco-futhark-multicore"]
default = ["c"]

[dependencies]
coco = { version = "0.5.0", package = "coco-rs" }
float_eq = "1.0.0"
coco-legacy = { path = "../coco-legacy" }

coco-futhark-c = { path = "../coco-futhark/c", optional = true }
coco-futhark-multicore = { path = "../coco-futhark/multicore", optional = true }

[dev-dependencies]
criterion = "0.3.5"
once_cell = "1.12.0"
proptest = "1.0.0"
