[package]
name = "coco-accelerated"
version = "0.1.0"
edition = "2021"

[features]
c = ["coco-futhark-c"]
multicore = ["coco-futhark-multicore"]
opencl = ["coco-futhark-opencl"]
cuda = ["coco-futhark-cuda"]
default = ["c"]

[dependencies]
coco = { version = "0.5.0", package = "coco-rs" }
float_eq = "1.0.0"
coco-legacy = { path = "../coco-legacy" }
strum = { version = "0.24.1", features = ["derive"] }

coco-futhark-c = { path = "../coco-futhark/c", optional = true }
coco-futhark-multicore = { path = "../coco-futhark/multicore", optional = true }
coco-futhark-opencl = { path = "../coco-futhark/opencl", optional = true }
coco-futhark-cuda = { path = "../coco-futhark/cuda", optional = true }

[dev-dependencies]
criterion = "0.3.5"
once_cell = "1.12.0"
proptest = "1.0.0"
