[package]
name = "coco-accelerated"
version = "0.1.0"
edition = "2021"

[features]
reference = ["coco"]
c = ["coco-futhark/c"]
multicore = ["coco-futhark/multicore"]
opencl = ["coco-futhark/opencl"]
cuda = ["coco-futhark/cuda"]
default = ["c", "multicore"]

[dependencies]
float_eq = "1.0.1"
ordered-float = "3.0.0"
strum = { version = "0.24.1", features = ["derive"] }
coco = { version = "0.5.0", package = "coco-rs", optional = true }
coco-legacy = { path = "../coco-legacy" }
coco-futhark = { path = "../coco-futhark", default-features = false }
