[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

[features]
multicore = ["coco-accelerated/multicore"]
opencl = ["coco-accelerated/opencl"]

[[bench]]
name = "single_eval"
harness = false

[[bench]]
name = "batch_eval"
harness = false

[dependencies.coco-reference]
package = "coco-rs"
version = "0.5.0"

[dependencies.coco-accelerated]
path = "../coco-accelerated"
features = ["c"]

[dev-dependencies]
criterion = "0.3.5"
once_cell = "1.12.0"
proptest = "1.0.0"
float_eq = "1.0.0"
rand = "0.8.5"
