[package]
name = "evaluation"
version = "0.1.0"
edition = "2021"

[features]
c = ["coco-accelerated/c"]
multicore = ["coco-accelerated/multicore"]
opencl = ["coco-accelerated/opencl"]
cuda = ["coco-accelerated/cuda"]
reference = ["coco-accelerated/reference"]
default = ["reference"]

[[bench]]
name = "batch_eval"
harness = false

[dependencies.coco-accelerated]
path = "../coco-accelerated"
default-features = false

[dev-dependencies]
criterion = "0.5.1"
once_cell = "1.18.0"
proptest = "1.2.0"
float_eq = "1.0.1"
rand = "0.8.5"
